FIEL-203-Fix-Scrollbar-and-datetime-width

--- a/force-app/main/default/lwc/jobDetailsPage/jobDetailsPage.css
+++ b/force-app/main/default/lwc/jobDetailsPage/jobDetailsPage.css
@@ -1,7 +1,6 @@
 * {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     user-select: none;
-    scrollbar-width: none !important;
 }
 
 /* Main Wrapper */
@@ -1342,7 +1341,7 @@ lightning-combobox {
 }
 
 .inline-edit-input.date-input {
-    max-width: 140px; /* Specific max-width for datetime-local input */
+    max-width: 160px; /* Specific max-width for datetime-local input */
     font-size: 12px;
 }
 
